fixed text align.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -11,6 +11,7 @@ h2 {
   font-weight: 300;
   font-size: 42px;
   color: white;
+  text-align: center;
 }
 
 .down{
